spec/.test/config/valid/only/extensions.php
<?php

return [
    'extensions' => [
        'id1' => new Test\TestFactory('extension31'),
        'id2' => new Test\TestFactory('extension32'),
    ],
];
