spec/.test/config/invalid/entry/aliases.php
<?php

return [
    'parameters' => [],
    'aliases' => [
        'alias1' => 'id1',
        'alias2' => [],
        'alias3' => 'id3',
    ],
    'factories' => [],
    'extensions' => [],
    'tags' => [],
    'metadata' => [],
];
